public class Acorde {
    public void agregarNota(Nota nota) {}
}