public class Artista {
    public String nombreArtistico;
    public List<Album> discografia;
    public List<Cancion> singles;
}