public class Cancion {
    public String titulo;
    public int duracionSegundos;
    public Album album;
    public Artista artista;
}