public class Estadistica {
    public void procesarLoteReproducciones(List<Reproduccion> reproducciones) { }
    public int calcularOyentesMensuales(Artista artista) { }
    public int calcularTotalEscuchasGlobales(Cancion cancion) { }
}