public class Genero {
    public String obtenerNombre() {}
    public String obtenerDescripcion() {}
}