public class Instrumento {
    public Familia obtenerFamilia() {}
}