public class Nota {
    public FiguraMusical getFigura() {}
}