public class Partitura {
    public Tonalidad getTonalidad() {}
    public Nota escribirNota(FiguraMusical figura) {}
    public void agregarAcorde(Acorde acorde) {}
}