public class Playlist {
    public void agregarCancion(Cancion cancion) {}
    public void removerCancion(Cancion cancion) {}
    public List<Cancion> listarCanciones() {}
}