public class TipoSuscripcion{
    
}