public class Usuario {
    public TipoSuscripcion getTipoSuscripcion() {}
    public void actualizarSuscripcion(TipoSuscripcion tipo) {}
    public Playlist crearPlaylist(String nombre) {}
    public void eliminarPlaylist(Playlist playlist) {}
    public List<Playlist> getMisPlaylists() {}
}